Fixed sidebar with comment submit form to overflow when pushed the main content.

--- a/SlideInfo.App/wwwroot/css/site.css
+++ b/SlideInfo.App/wwwroot/css/site.css
@@ -158,6 +158,8 @@ ul {
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
     transition: margin-left .5s;
+    width: 100%;
+    position: absolute;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
